[package]
name = "emacs-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
env_logger = "*"
rand = "*"
clap = "*"
futures = "*"
tokio = { version = "*", features = ["io-util", "macros", "net", "process", "rt", "signal", "time"] }
tokio-util = { version = "*", features = ["codec"] }

[[bin]]
name = "emacs-pool-daemon"
path = "src/daemon.rs"

[[bin]]
name = "emacs-pool-client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"