[package]
name = "emacs-pool"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "An emacs daemon pool for fast emacs startups."
homepage = "https://github.com/cfal/emacs-pool/"
repository = "https://github.com/cfal/emacs-pool/"
readme = "README.md"
keywords = ["emacs", "emacs-startup"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
rand = "0.8.5"
clap = "3.2.16"
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["io-util", "macros", "net", "process", "rt", "signal", "time"] }
tokio-util = { version = "0.7.3", features = ["codec"] }

[[bin]]
name = "emacs-pool-daemon"
path = "src/daemon.rs"

[[bin]]
name = "emacs-pool-client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"