[package]
name = "emacs-pool"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An emacs daemon pool for fast emacs startups."
homepage = "https://github.com/cfal/emacs-pool/"
repository = "https://github.com/cfal/emacs-pool/"
readme = "README.md"
keywords = ["emacs", "emacs-startup"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
log = "*"
env_logger = "*"
rand = "*"
clap = "*"
futures = "*"
tokio = { version = "*", features = ["io-util", "macros", "net", "process", "rt", "signal", "time"] }
tokio-util = { version = "*", features = ["codec"] }

[[bin]]
name = "emacs-pool-daemon"
path = "src/daemon.rs"

[[bin]]
name = "emacs-pool-client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"